@@ -77,6 +77,13 @@ subtest 'new' => sub {
     isa_ok $be, 'Yancy::Backend::Sqlite';
     isa_ok $be->sqlite, 'Mojo::SQLite';
     is_deeply $be->collections, $collections;
+
+    subtest 'new with connection' => sub {
+        $be = Yancy::Backend::Sqlite->new( $sqlite, $collections );
+        isa_ok $be, 'Yancy::Backend::Sqlite';
+        isa_ok $be->sqlite, 'Mojo::SQLite';
+        is_deeply $be->collections, $collections;
+    };
 };
 
 # Override sqlite attribute with reference to instantiated db object from above
