@@ -2,6 +2,11 @@ Changelog for Yancy
 
 {{ $NEXT }}
 
+    [Added]
+
+    - Yancy can now share a database object with the rest of your app by
+      passing in a hashref for the C<backend>. See Mojolicious::Plugin::Backend.
+
 0.009     2018-01-07 16:33:16-06:00 America/Chicago
 
     [Added]
